--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   cloud_firestore: ^4.3.2
   provider: ^6.0.5
   go_router: ^6.0.5
+  image_picker: ^0.8.6+2
+  cached_network_image: ^3.2.3
+  uuid: ^3.0.7
+  firebase_storage: ^11.0.13
 
 dev_dependencies:
   flutter_test:
