--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.2.3
   uuid: ^3.0.7
   firebase_storage: ^11.0.13
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
