--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,17 @@ dependencies:
   uuid: ^3.0.7
   firebase_storage: ^11.0.13
   intl: ^0.17.0
+  freezed_annotation: ^2.2.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
 
   flutter_lints: ^2.0.0
+  json_serializable: ^6.6.1
 
 flutter:
   uses-material-design: true
